--- a/JM_Budke.html
+++ b/JM_Budke.html
@@ -79,7 +79,7 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
                 <p class="paragraph_style_1"><span class="Bold"><br /></span></p>
                 <p class="paragraph_style_1"><span class="Bold">Mailing Address</span><br /></p>
                 <p class="paragraph_style_1"> UC Davis, Plant Biology<br /></p>
-                <p class="paragraph_style_1">Two Shields Avenue<br /></p>
+                <p class="paragraph_style_1">One Shields Avenue<br /></p>
                 <p class="paragraph_style_1">  Davis, CA 95616 USA<br /></p>
                 <p class="paragraph_style_2"><span class="style_1"> <br /></span></p>
                 <p class="paragraph_style_2"><span class="style_1">Office: </span>2231 Life Sciences<span class="style_1"><br /></span></p>
