--- a/Teaching.html
+++ b/Teaching.html
@@ -75,7 +75,7 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
         </div>
         <div style="margin-left: 0px; position: relative; width: 700px; z-index: 5; " id="body_layer">
           <div style="height: 0px; line-height: 0px; " class="bumper"> </div>
-          <div id="id2" style="height: 736px; left: 27px; position: absolute; top: 234px; width: 651px; z-index: 1; " class="style_SkipStroke_1 shape-with-text">
+          <div id="id2" style="height: 736px; left: 27px; position: absolute; top: 253px; width: 651px; z-index: 1; " class="style_SkipStroke_1 shape-with-text">
             <div class="text-content style_External_651_736" style="padding: 0px; ">
               <div class="style_1">
                 <p style="padding-top: 0pt; " class="paragraph_style_1"><span style="line-height: 20px; " class="style_2"><br /></span></p>
@@ -156,7 +156,7 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
           
 
 
-          <div style="height: 1px; width: 630px;  height: 1px; left: 38px; position: absolute; top: 929px; width: 630px; z-index: 1; " class="tinyText">
+          <div style="height: 1px; width: 630px;  height: 1px; left: 38px; position: absolute; top: 942px; width: 630px; z-index: 1; " class="tinyText">
             <div style="position: relative; width: 630px; ">
               <img src="Teaching_files/shapeimage_5.jpg" alt="" style="height: 1px; left: 0px; position: absolute; top: 0px; width: 630px; " />
             </div>
@@ -164,7 +164,7 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
           
 
 
-          <div style="height: 1px; width: 630px;  height: 1px; left: 37px; position: absolute; top: 449px; width: 630px; z-index: 1; " class="tinyText">
+          <div style="height: 1px; width: 630px;  height: 1px; left: 37px; position: absolute; top: 469px; width: 630px; z-index: 1; " class="tinyText">
             <div style="position: relative; width: 630px; ">
               <img src="Teaching_files/shapeimage_6.jpg" alt="" style="height: 1px; left: 0px; position: absolute; top: 0px; width: 630px; " />
             </div>
@@ -178,6 +178,11 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
           <script type="text/javascript"><!--//--><![CDATA[//><!--
 new Paste('widget1', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResources', '.', {"emptyLook": false});
 //--><!]]></script>
+          <div style="height: 1px; width: 630px;  height: 1px; left: 35px; position: absolute; top: 240px; width: 630px; z-index: 1; " class="tinyText">
+            <div style="position: relative; width: 630px; ">
+              <img src="Teaching_files/shapeimage_7.jpg" alt="" style="height: 1px; left: 0px; position: absolute; top: 0px; width: 630px; " />
+            </div>
+          </div>
           <div style="height: 1045px; line-height: 1045px; " class="spacer"> </div>
         </div>
         <div style="height: 0px; line-height: 0px; margin-left: 0px; position: relative; width: 700px; z-index: 15; " id="footer_layer">
