--- a/Contact.html
+++ b/Contact.html
@@ -68,7 +68,7 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
             <div class="text-content style_External_699_66" style="padding: 0px; ">
               <div class="style">
                 <p style="padding-top: 0pt; " class="paragraph_style">The Budke Lab - <span class="style_1">Starting August 2016</span><br /></p>
-                <p style="padding-bottom: 0pt; " class="paragraph_style"><a onclick="window.open(this.href); return false;" title="http://www.utk.edu/" href="http://www.utk.edu/" onkeypress="window.open(this.href); return false;">University of Tennessee, Knoxville</a> - <a onclick="window.open(this.href); return false;" title="http://eeb.bio.utk.edu/" href="http://eeb.bio.utk.edu/" onkeypress="window.open(this.href); return false;">Ecology &amp; Evolutionary Biology</a></p>
+                <p style="padding-bottom: 0pt; " class="paragraph_style"><a onclick="window.open(this.href); return false;" title="http://www.utk.edu/" href="http://www.utk.edu/" onkeypress="window.open(this.href); return false;">University of Tennessee, Knoxville</a> - <a onclick="window.open(this.href); return false;" title="http://eeb.bio.utk.edu/" href="http://eeb.bio.utk.edu/" onkeypress="window.open(this.href); return false;" class="class1">Ecology &amp; Evolutionary Biology</a></p>
               </div>
             </div>
           </div>
@@ -89,7 +89,7 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
                 <p class="paragraph_style_1">569 Dabney Hall<span style="line-height: 20px; " class="style_6"><br /></span></p>
                 <p class="paragraph_style_1">Knoxville, TN  37996<span style="line-height: 20px; " class="style_6"> </span>USA<br /></p>
                 <p class="paragraph_style_2"><br /></p>
-                <p class="paragraph_style_2"><a onclick="window.open(this.href); return false;" title="http://www.utk.edu/maps/" href="http://www.utk.edu/maps/" onkeypress="window.open(this.href); return false;" class="class1"><span class="style_4">Lab/Office: </span>316 Hesler Hall<span class="style_2"> </span></a><a onclick="window.open(this.href); return false;" title="http://www.utk.edu/maps/" href="http://www.utk.edu/maps/" onkeypress="window.open(this.href); return false;"><br /></a></p>
+                <p class="paragraph_style_2"><a onclick="window.open(this.href); return false;" title="http://www.utk.edu/maps/" href="http://www.utk.edu/maps/" onkeypress="window.open(this.href); return false;" class="class2"><span class="style_4">Lab/Office: </span>316 Hesler Hall<span class="style_2"> </span></a><a onclick="window.open(this.href); return false;" title="http://www.utk.edu/maps/" href="http://www.utk.edu/maps/" onkeypress="window.open(this.href); return false;"><br /></a></p>
                 <p class="paragraph_style_2"><a onclick="window.open(this.href); return false;" title="http://www.utk.edu/maps/" href="http://www.utk.edu/maps/" onkeypress="window.open(this.href); return false;"><span class="style_4">TENN Herbarium:</span> Temple Hall</a><span class="style_2"><br /></span></p>
                 <p style="padding-bottom: 0pt; " class="paragraph_style_3"><span class="style_2"> </span></p>
               </div>
