--- a/Lab_Members.html
+++ b/Lab_Members.html
@@ -140,7 +140,7 @@ new Paste('widget1', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
           <div id="id5" style="height: 402px; left: 57px; position: absolute; top: 565px; width: 590px; z-index: 1; " class="style_SkipStroke_1 shape-with-text">
             <div class="text-content style_External_590_402" style="padding: 0px; ">
               <div class="style">
-                <p style="padding-top: 0pt; " class="paragraph_style_1">Interested in joining the lab? Contact me! <span class="style_3">- </span><a title="mailto:jessica.m.budke@gmail.com" href="mailto:jessica.m.budke@gmail.com" class="style_3">jessica.m.budke@gmail.com</a><span class="style_4"><br /></span></p>
+                <p style="padding-top: 0pt; " class="paragraph_style_1">    Interested in joining the lab? Contact me! <span class="style_3">- </span><a title="mailto:jessica.m.budke@gmail.com" href="mailto:jessica.m.budke@gmail.com" class="style_3">jessica.m.budke@gmail.com</a><span class="style_4"><br /></span></p>
                 <p class="paragraph_style_1"><br /></p>
                 <p class="paragraph_style_1">    - <span class="style_3">Currently accepting graduate students. <br /></span></p>
                 <p class="paragraph_style_1"><span class="style_3">             </span><span class="style_4">Applications due January 1, 2017 for the 2017-2018 school year.<br /></span></p>
@@ -149,7 +149,7 @@ new Paste('widget1', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
                 <p class="paragraph_style_1"><span class="style_4">            </span><a class="class3" title="https://www.nsf.gov/funding/pgm_summ.jsp?pims_id=503622" href="https://www.nsf.gov/funding/pgm_summ.jsp?pims_id=503622"><span class="style_4">National Science Foundation Postdoctoral Research Fellowship in Biology </span></a><span class="style_4"><br /></span></p>
                 <p class="paragraph_style_1"><span class="style_4">                    Applications due November 1, 2016.<br /></span></p>
                 <p class="paragraph_style_1"><span class="style_4"><br /></span></p>
-                <p class="paragraph_style_1">  <span class="style_3"> - Upcoming: Hiring a laboratory technician and a junior curatorial assistant.<br /></span></p>
+                <p class="paragraph_style_1">  <span class="style_3">  - Upcoming: Hiring a laboratory technician and a junior curatorial assistant.<br /></span></p>
                 <p class="paragraph_style_1"><span class="style_3">            </span><span class="style_4">More information to come soon!<br /></span></p>
                 <p class="paragraph_style_1"><br /></p>
                 <p class="paragraph_style_1">       <br /></p>
@@ -166,20 +166,16 @@ new Paste('widget1', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
           
 
 
-          <div id="id6" style="height: 41px; left: 355px; position: absolute; top: 405px; width: 227px; z-index: 1; " class="style_SkipStroke_4 shape-with-text">
-            <div class="text-content graphic_textbox_layout_style_default_External_227_41" style="padding: 0px; ">
-              <div class="graphic_textbox_layout_style_default">
-                <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_5">Download my full CV here.</p>
-              </div>
+          <div style="height: 1px; width: 630px;  height: 1px; left: 35px; position: absolute; top: 536px; width: 630px; z-index: 1; " class="tinyText">
+            <div style="position: relative; width: 630px; ">
+              <img src="Lab_Members_files/shapeimage_5.jpg" alt="" style="height: 1px; left: 0px; position: absolute; top: 0px; width: 630px; " />
             </div>
           </div>
           
 
 
-          <div style="height: 1px; width: 630px;  height: 1px; left: 35px; position: absolute; top: 536px; width: 630px; z-index: 1; " class="tinyText">
-            <div style="position: relative; width: 630px; ">
-              <img src="Lab_Members_files/shapeimage_5.jpg" alt="" style="height: 1px; left: 0px; position: absolute; top: 0px; width: 630px; " />
-            </div>
+          <div class="tinyText" style="height: 41px; left: 355px; position: absolute; top: 405px; width: 227px; z-index: 1; ">
+            <img usemap="#map2" id="shapeimage_6" src="Lab_Members_files/shapeimage_6.png" style="border: none; height: 51px; left: -7px; position: absolute; top: -7px; width: 241px; z-index: 1; " alt="Download my CV here." title="" /><map name="map2" id="map2"><area href="Lab_Members_files/Budke_CV48_1.pdf" title="Lab_Members_files/Budke_CV48_1.pdf" alt="Lab_Members_files/Budke_CV48_1.pdf" coords="7, 7, 234, 48" /></map>
           </div>
           <div style="height: 967px; line-height: 967px; " class="spacer"> </div>
         </div>
