--- a/Teaching.html
+++ b/Teaching.html
@@ -68,7 +68,7 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
             <div class="text-content style_External_699_66" style="padding: 0px; ">
               <div class="style">
                 <p style="padding-top: 0pt; " class="paragraph_style">The Budke Lab - <span class="style_1">Starting August 2016</span><br /></p>
-                <p style="padding-bottom: 0pt; " class="paragraph_style"><a onclick="window.open(this.href); return false;" title="http://www.utk.edu/" href="http://www.utk.edu/" onkeypress="window.open(this.href); return false;">University of Tennessee, Knoxville</a> - <a onclick="window.open(this.href); return false;" title="http://eeb.bio.utk.edu/" href="http://eeb.bio.utk.edu/" onkeypress="window.open(this.href); return false;">Ecology &amp; Evolutionary Biology</a></p>
+                <p style="padding-bottom: 0pt; " class="paragraph_style"><a onclick="window.open(this.href); return false;" title="http://www.utk.edu/" href="http://www.utk.edu/" onkeypress="window.open(this.href); return false;">University of Tennessee, Knoxville</a> - <a onclick="window.open(this.href); return false;" title="http://eeb.bio.utk.edu/" href="http://eeb.bio.utk.edu/" onkeypress="window.open(this.href); return false;" class="class1">Ecology &amp; Evolutionary Biology</a></p>
               </div>
             </div>
           </div>
