--- a/Lab_Members.html
+++ b/Lab_Members.html
@@ -109,7 +109,7 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
 
           <div style="height: 156px; width: 658px;  height: 156px; left: 21px; position: absolute; top: 19px; width: 658px; z-index: 1; " class="tinyText reflection_0">
             <div style="position: relative; width: 658px; ">
-              <img src="Lab_Members_files/shapeimage_3.png" alt="" style="height: 156px; left: 0px; margin-left: 0px; position: absolute; top: 0px; width: 658px; " />
+              <img src="Lab_Members_files/shapeimage_3.png" alt="" style="height: 156px; left: 0px; position: absolute; top: 0px; width: 658px; " />
             </div>
           </div>
           <div class="com-apple-iweb-widget-HTMLRegion" id="widget1" style="height: 100px; left: 463px; opacity: 1.00; position: absolute; top: 857px; width: 200px; z-index: 1; ">
