--- a/Outreach.html
+++ b/Outreach.html
@@ -218,7 +218,7 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
             <div class="text-content style_External_360_291" style="padding: 0px; ">
               <div class="style">
                 <p style="padding-top: 0pt; " class="paragraph_style_5">Grade Levels 9-12 <br /></p>
-                <p style="padding-bottom: 0pt; " class="paragraph_style_6">These laboratory exercises were designed to help students to better understand the concept of chemical competition in ecology using the moss <span class="style_1">Sphagnum</span>.  These exercises aim to show students that not all competition is carried out by animals and not all competition is a physical battle, as most of the traditional examples show.   By using the chemical alteration of the environment by <span class="style_1">Sphagnum</span>, students can also be taught about pH, in a biological framework.  As a result, the labs can be used in either an ecology unit or a chemistry unit, within a biology course.  </p>
+                <p style="padding-bottom: 0pt; " class="paragraph_style_6">These laboratory exercises were designed to help students to better understand the concept of chemical competition in ecology using the moss <span class="style_5">Sphagnum</span>.  These exercises aim to show students that not all competition is carried out by animals and not all competition is a physical battle, as most of the traditional examples show.   By using the chemical alteration of the environment by <span class="style_5">Sphagnum</span>, students can also be taught about pH, in a biological framework.  As a result, the labs can be used in either an ecology unit or a chemistry unit, within a biology course.  </p>
               </div>
             </div>
           </div>
@@ -248,7 +248,7 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
           <div id="id8" style="height: 69px; left: 30px; position: absolute; top: 1146px; width: 375px; z-index: 1; " class="style_SkipStroke_2 shape-with-text">
             <div class="text-content style_External_375_69" style="padding: 0px; ">
               <div class="style">
-                <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_5"><span class="style_5">Powerpoint Introduction </span>– Includes 15 slides that introduce the concepts of competition, ion exchange in <span class="style_1">Sphagnum</span> mosses and succession in peatlands. </p>
+                <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_5"><span class="style_6">Powerpoint Introduction </span>– Includes 15 slides that introduce the concepts of competition, ion exchange in <span class="style_1">Sphagnum</span> mosses and succession in peatlands. </p>
               </div>
             </div>
           </div>
@@ -276,7 +276,7 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
           <div id="id9" style="height: 89px; left: 7px; position: absolute; top: 1871px; width: 440px; z-index: 1; " class="style_SkipStroke_3 shape-with-text">
             <div class="text-content graphic_shape_layout_style_default_External_440_89" style="padding: 0px; ">
               <div class="graphic_shape_layout_style_default">
-                <p style="padding-top: 0pt; " class="paragraph_style_9"><span class="style_5">A Visit to the Miniature Forest - Brochure</span><br /></p>
+                <p style="padding-top: 0pt; " class="paragraph_style_9"><span class="style_6">A Visit to the Miniature Forest - Brochure</span><br /></p>
                 <p style="padding-bottom: 0pt; " class="paragraph_style_9">Insights into the biology and evolution of Bryophytes in Northeastern Connecticut</p>
               </div>
             </div>
@@ -397,7 +397,7 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
           <div id="id15" style="height: 45px; left: 268px; position: absolute; top: 651px; width: 183px; z-index: 1; " class="style_SkipStroke_1 shape-with-text">
             <div class="text-content graphic_textbox_layout_style_default_External_183_45" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
-                <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_14"><span style="line-height: 17px; " class="style_6">James T. Goodwin Conservation Center Hampton, CT</span></p>
+                <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_14"><span style="line-height: 17px; " class="style_7">James T. Goodwin Conservation Center Hampton, CT</span></p>
               </div>
             </div>
           </div>
@@ -414,11 +414,11 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
           
 
 
-          <div id="id17" style="height: 172px; left: 28px; position: absolute; top: 1251px; width: 379px; z-index: 1; " class="style_SkipStroke_1 shape-with-text">
+          <div id="id17" style="height: 172px; left: 28px; position: absolute; top: 1247px; width: 379px; z-index: 1; " class="style_SkipStroke_1 shape-with-text">
             <div class="text-content graphic_textbox_layout_style_default_External_379_172" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
-                <p style="padding-top: 0pt; " class="paragraph_style_5"><span class="style_5">Laboratory Exercise 1</span> – The ability to alter the pH of the water surrounding it is compared between <span class="style_1">Sphagnum</span> moss and another non-moss aquatic plant. <br /></p>
-                <p class="paragraph_style_16"><span class="style_5">Laboratory Exercise 2</span> – The ability of <span class="style_1">Sphagnum</span> to alter the pH of the water surrounding it is compared with and without additional ions. <br /></p>
+                <p style="padding-top: 0pt; " class="paragraph_style_5">Laboratory Exercise 1 – The ability to alter the pH of the water surrounding it is compared between Sphagnum moss and another non-moss aquatic plant. <br /></p>
+                <p class="paragraph_style_16">Laboratory Exercise 2 – The ability of Sphagnum to alter the pH of the water surrounding it is compared with and without additional ions. <br /></p>
               </div>
             </div>
           </div>
@@ -429,7 +429,7 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
             <div class="text-content graphic_textbox_layout_style_default_External_370_93" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
                 <p style="padding-top: 0pt; " class="paragraph_style_17"><br /></p>
-                <p style="padding-bottom: 0pt; " class="paragraph_style_5"><span class="style_5">Teacher’s Notes </span>– Pre-laboratory preparation, data collection, and <span class="style_1">Sphagnum</span> collection are covered.</p>
+                <p style="padding-bottom: 0pt; " class="paragraph_style_5"><span class="style_6">Teacher’s Notes </span>– Pre-laboratory preparation, data collection, and <span class="style_1">Sphagnum</span> collection are covered.</p>
               </div>
             </div>
           </div>
