--- a/Outreach.html
+++ b/Outreach.html
@@ -417,8 +417,8 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
           <div id="id17" style="height: 172px; left: 28px; position: absolute; top: 1247px; width: 379px; z-index: 1; " class="style_SkipStroke_1 shape-with-text">
             <div class="text-content graphic_textbox_layout_style_default_External_379_172" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
-                <p style="padding-top: 0pt; " class="paragraph_style_5">Laboratory Exercise 1 – The ability to alter the pH of the water surrounding it is compared between Sphagnum moss and another non-moss aquatic plant. <br /></p>
-                <p class="paragraph_style_16">Laboratory Exercise 2 – The ability of Sphagnum to alter the pH of the water surrounding it is compared with and without additional ions. <br /></p>
+                <p style="padding-top: 0pt; " class="paragraph_style_5">Laboratory Exercise 1 – The ability to alter the pH of the water surrounding it is compared between <span class="style_5">Sphagnum</span> moss and another non-moss aquatic plant. <br /></p>
+                <p class="paragraph_style_16">Laboratory Exercise 2 – The ability of <span class="style_5">Sphagnum</span> to alter the pH of the water surrounding it is compared with and without additional ions. <br /></p>
               </div>
             </div>
           </div>
