--- a/Outreach.html
+++ b/Outreach.html
@@ -248,7 +248,7 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
           <div id="id8" style="height: 69px; left: 30px; position: absolute; top: 1146px; width: 375px; z-index: 1; " class="style_SkipStroke_2 shape-with-text">
             <div class="text-content style_External_375_69" style="padding: 0px; ">
               <div class="style">
-                <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_5"><span class="style_6">Powerpoint Introduction </span>– Includes 15 slides that introduce the concepts of competition, ion exchange in <span class="style_1">Sphagnum</span><span class="style_5"> </span>mosses and succession in peatlands. </p>
+                <p style="padding-bottom: 0pt; padding-top: 0pt; " class="paragraph_style_5"><span class="style_6">Powerpoint Introduction </span>– Includes 15 slides that introduce the concepts of competition, ion exchange in <span class="style_5">Sphagnum</span> mosses and succession in peatlands. </p>
               </div>
             </div>
           </div>
