--- a/Contact.html
+++ b/Contact.html
@@ -78,7 +78,7 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
           <div id="id2" style="height: 370px; left: 381px; position: absolute; top: 41px; width: 311px; z-index: 1; " class="style_SkipStroke_1 shape-with-text">
             <div class="text-content graphic_textbox_layout_style_default_External_311_370" style="padding: 0px; ">
               <div class="graphic_textbox_layout_style_default">
-                <p style="padding-top: 0pt; " class="paragraph_style_1"><span class="style_2">Email </span>-<span class="style_2"> </span><span class="style_3">jbudke@utk.edu</span><span class="style_4"><br /></span></p>
+                <p style="padding-top: 0pt; " class="paragraph_style_1"><span class="style_2">Email </span>-<span class="style_2"> </span><a title="mailto:jbudke@utk.edu" href="mailto:jbudke@utk.edu" class="style_3">jbudke@utk.edu</a><span class="style_4"><br /></span></p>
                 <p class="paragraph_style_1"><span class="style_4">Twitter</span> - <a onclick="window.open(this.href); return false;" title="https://twitter.com/MossPlants" href="https://twitter.com/MossPlants" onkeypress="window.open(this.href); return false;">@MossPlants</a><br /></p>
                 <p class="paragraph_style_1"><br /></p>
                 <p class="paragraph_style_1"><span class="style_4">Blog </span>- <a onclick="window.open(this.href); return false;" title="http://mossplants.fieldofscience.com/" href="http://mossplants.fieldofscience.com/" onkeypress="window.open(this.href); return false;" style="line-height: 21px; " class="style_5">http://mossplants.fieldofscience.com/</a><span style="line-height: 21px; " class="style_5"> </span><br /></p>
