--- a/Contact.html
+++ b/Contact.html
@@ -90,7 +90,7 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
                 <p class="paragraph_style_1">Knoxville, TN  37996<span style="line-height: 20px; " class="style_6"> </span>USA<br /></p>
                 <p class="paragraph_style_2"><br /></p>
                 <p class="paragraph_style_2"><a onclick="window.open(this.href); return false;" title="http://www.utk.edu/maps/" href="http://www.utk.edu/maps/" onkeypress="window.open(this.href); return false;" class="class2"><span class="style_4">Office: </span>342 Hesler Hall<span class="style_2"> <br /></span></a></p>
-                <p class="paragraph_style_2"><span class="style_2">Office Phone: </span><span class="style_3">+1 (865) 974-6204<br /></span></p>
+                <p class="paragraph_style_2"><span class="style_2">Office Phone: </span><span class="style_3">(865) 974-6204<br /></span></p>
                 <p class="paragraph_style_2"><span class="style_3"><br /></span></p>
                 <p class="paragraph_style_2"><a title="http://www.utk.edu/maps/" href="http://www.utk.edu/maps/"><span class="style_2">Lab: </span><span class="style_3">316 Hesler Hall<br /></span></a></p>
                 <p class="paragraph_style_2"><a title="http://www.utk.edu/maps/" href="http://www.utk.edu/maps/"><span class="style_2">TENN Herbarium: </span><span class="style_3">Temple Hall</span></a><span class="style_2"><br /></span></p>
