2nd April Updata

--- a/People.html
+++ b/People.html
@@ -358,6 +358,14 @@ new Paste('widget1', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
           <div style="height: 258px; width: 168px;  height: 258px; left: 83px; position: absolute; top: 2637px; width: 168px; z-index: 1; " class="tinyText style_SkipStroke_2 stroke_0 shadow_8">
             <img src="People_files/Nate1.jpg" alt="" style="border: none; height: 258px; width: 168px; " />
           </div>
+          
+
+
+          <div style="height: 1px; width: 630px;  height: 1px; left: 37px; position: absolute; top: 1997px; width: 630px; z-index: 1; " class="tinyText">
+            <div style="position: relative; width: 630px; ">
+              <img src="People_files/shapeimage_7.jpg" alt="" style="height: 1px; left: 0px; position: absolute; top: 0px; width: 630px; " />
+            </div>
+          </div>
           <div style="height: 3285px; line-height: 3285px; " class="spacer"> </div>
         </div>
         <div style="height: 0px; line-height: 0px; margin-left: 0px; position: relative; width: 700px; z-index: 15; " id="footer_layer">
