--- a/Research.html
+++ b/Research.html
@@ -59,7 +59,7 @@ new NavBar('widget0', 'Scripts/Widgets/Navbar', 'Scripts/Widgets/SharedResources
           <div id="id1" style="height: 70px; left: 0px; position: absolute; top: 12px; width: 699px; z-index: 1; " class="style_SkipStroke shape-with-text">
             <div class="text-content style_External_699_70" style="padding: 0px; ">
               <div class="style">
-                <p style="padding-top: 0pt; " class="paragraph_style">The Budke Lab<br /></p>
+                <p style="padding-top: 0pt; " class="paragraph_style">Budke Lab<br /></p>
                 <p style="padding-bottom: 0pt; " class="paragraph_style_1"><a onclick="window.open(this.href); return false;" title="http://www.utk.edu/" href="http://www.utk.edu/" onkeypress="window.open(this.href); return false;">University of Tennessee, Knoxville</a> - <a onclick="window.open(this.href); return false;" title="http://eeb.bio.utk.edu/" href="http://eeb.bio.utk.edu/" onkeypress="window.open(this.href); return false;">Ecology &amp; Evolutionary Biology</a></p>
               </div>
             </div>
