--- a/Outreach.html
+++ b/Outreach.html
@@ -516,6 +516,14 @@ new Paste('widget1', 'Scripts/Widgets/HTMLRegion', 'Scripts/Widgets/SharedResour
           <div class="tinyText" style="height: 65px; left: 399px; position: absolute; top: 1188px; width: 241px; z-index: 1; ">
             <img usemap="#map5" id="shapeimage_21" src="Outreach_files/shapeimage_21.png" style="border: none; height: 71px; left: -3px; position: absolute; top: -3px; width: 247px; z-index: 1; " alt="" title="" /><map name="map5" id="map5"><area href="Outreach_files/SphagnumIntroduction.ppt" title="Outreach_files/SphagnumIntroduction.ppt" alt="Outreach_files/SphagnumIntroduction.ppt" coords="3, 3, 244, 68" /></map>
           </div>
+          
+
+
+          <div style="height: 1px; width: 630px;  height: 1px; left: 30px; position: absolute; top: 13px; width: 630px; z-index: 1; " class="tinyText">
+            <div style="position: relative; width: 630px; ">
+              <img src="Outreach_files/shapeimage_22.jpg" alt="" style="height: 1px; left: 0px; position: absolute; top: 0px; width: 630px; " />
+            </div>
+          </div>
           <div style="height: 1937px; line-height: 1937px; " class="spacer"> </div>
         </div>
         <div style="height: 0px; line-height: 0px; margin-left: 0px; position: relative; width: 700px; z-index: 15; " id="footer_layer">
