fix image name capitalization

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 									</div>
 									<div class="col-3 col-6-narrow col-12-mobile">
 										<section>
-											<a href="#" class="image fit"><img src="images/IMG_2762 2b.JPG" alt="" /></a>
+											<a href="#" class="image fit"><img src="images/IMG_2762 2b.jpg" alt="" /></a>
 											<h3>Teaching</h3>
 											<p>Our classes promote hands-on learning that puts students in direct contact with organisms in the field, laboratory, and natural history collections.</p>
 											<ul class="actions">
