--- a/publications.html
+++ b/publications.html
@@ -21,7 +21,7 @@
 						<ul>
 							<li><a href="index.html">Home</a>
 							</li>
-							<li><a href="LabMembers.html">Lab Members</a></li>
+							<li><a href="labmembers.html">Lab Members</a></li>
 							<li><a href="research.html">Research</a></li>
 							<li><a href="publications.html">Publications</a></li>
 							<li><a href="teaching.html">Teaching</a></li>
