Fix teaching image

--- a/teaching.html
+++ b/teaching.html
@@ -44,7 +44,7 @@
 
 			<!-- courses and Teaching materials -->
 							<section id="courses">
-								<a href="#" class="image fit"><img src="images/IMG_2762 2.JPG" alt="" /></a>
+								<a href="#" class="image fit"><img src="images/IMG_2762 2.jpg" alt="" /></a>
 								<h3>Dr. Budke teaches the following courses at UTK</h3>
 								<h4>Undergraduate/Graduate Courses</h4>
 								<p><ul>
