--- a/index.html
+++ b/index.html
@@ -58,41 +58,41 @@
 								<div class="row">
 									<div class="col-3 col-6-narrow col-12-mobile">
 										<section>
-											<a href="#" class="image fit"><img src="images/LabMembers.jpg" alt="" /></a>
+											<a href="labmembers.html" class="image fit"><img src="images/LabMembers.jpg" alt="" /></a>
 											<h3>Lab Members</h3>
 											<p>Our lab is full of botany enthusiasts who are studing plants from a variety of perspectives to expand our knowlege of the natural world.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">Learn More</a></li>
+												<li><a href="labmembers.html" class="button">Learn More</a></li>
 											</ul>
 										</section>
 									</div>
 									<div class="col-3 col-6-narrow col-12-mobile">
 										<section>
-											<a href="#" class="image fit"><img src="images/Figure4Final4.png" alt="" /></a>
+											<a href="research.html" class="image fit"><img src="images/Figure4Final4.png" alt="" /></a>
 											<h3>Research</h3>
 											<p>Our research focuses on structure-function relationships, morphological evolution, and parent-offspring conflict in plants.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">Learn More</a></li>
+												<li><a href="research.html" class="button">Learn More</a></li>
 											</ul>
 										</section>
 									</div>
 									<div class="col-3 col-6-narrow col-12-mobile">
 										<section>
-											<a href="#" class="image fit"><img src="images/IMG_2762 2b.jpg" alt="" /></a>
+											<a href="teaching.html" class="image fit"><img src="images/IMG_2762 2b.jpg" alt="" /></a>
 											<h3>Teaching</h3>
 											<p>Our classes promote hands-on learning that puts students in direct contact with organisms in the field, laboratory, and natural history collections.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">Learn More</a></li>
+												<li><a href="teaching.html" class="button">Learn More</a></li>
 											</ul>
 										</section>
 									</div>
 									<div class="col-3 col-6-narrow col-12-mobile">
 										<section>
-											<a href="#" class="image fit"><img src="images/IMG_3300b.jpg" alt="" /></a>
+											<a href="outreach.html" class="image fit"><img src="images/IMG_3300b.jpg" alt="" /></a>
 											<h3>Outreach</h3>
 											<p>We share our botanical expertise with members of the public during moss/fern walks and behind-the-scenes tours at the herbarium.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">Learn More</a></li>
+												<li><a href="outreach.html" class="button">Learn More</a></li>
 											</ul>
 										</section>
 									</div>
