--- a/outreach.html
+++ b/outreach.html
@@ -72,7 +72,7 @@
 									</div>
 									<!-- image -->
 									<div class="col-4 col-4-narrow col-12-mobilep">
-										<a href="#" class="image fit"><img src="images/pincushion.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/pincushion.JPG" alt="" /></a>
 										<h1>The pincushion moss <i>Leucobryum albidum.</i></h1>
 									</div>
 								</div>
