--- a/teaching.html
+++ b/teaching.html
@@ -73,7 +73,7 @@
 									</div>
 									<!-- image -->
 									<div class="col-4 col-4-narrow col-12-mobilep">
-										<a href="#" class="image fit"><img src="images/img_0584c.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/IMG_0584c.jpg" alt="" /></a>
 									</div>
 									<div class="col-12 col-12-narrow col-12-mobilep">
 								<div class="table-wrapper">
