Final updates before announcing

--- a/labmembers.html
+++ b/labmembers.html
@@ -54,7 +54,7 @@
 									B.S., <a href="http://miamioh.edu/cas/academics/departments/biology/" target="_blank">Miami University</a>, 2003<br />
 									<br />
 								    <a href="https://scholar.google.com/citations?hl=en&user=CJ6j1Y0AAAAJ&view_op=list_works&gmla=AJsN-F764UKF9tsLgJVXe7E9gbAX_UcBC15kEFklgE14D4lMlJCZQjBMespd37oBvUc4YeINrT_Li9tsAEHfRmb4PtzOr5SmgQ" target="_blank">Google Scholar Page</a><br />
-									<a href="People_files/Budke_CV58.pdf" target="_blank">Current CV</a>
+									<a href="People_files/Budke_CV64Full.pdf" target="_blank">Current CV</a>
 										</ul></p>
 								<br /><p><br /><br />
 								<blockquote>
