--- a/outreach.html
+++ b/outreach.html
@@ -65,10 +65,13 @@
 									<div class="col-8 col-8-narrow col-12-mobilep">
 									  <a name="communicatingsciencetothepublic"></a>
 										<h3 target="_blank">Communicating Science to the Public</h3>
-											<h4><a href="http://www.mossplants.blogspot.com/" target="_blank">Moss Plants and More: Commentary on All Things Bryological</a></h4>
-											<p>Dr. Budke wrote a blog communicating information about mosses to the public. She discussed news, research articles, common species, and fun facts. <strong>This blog is currently archived and is not actively updated.</strong></p>
+									
 										<p>Communicating clearly and effectively is an important skill for scientists to practice and master. We believe that scientists using their voices to educate about and advocate for science is critical to both increasing the public’s support for and government funding of research.
 										</p>
+										<h4><a href="https://www.nhpr.org/post/outsidein-exploring-moss-and-mold#stream/0" target="_blank">Exploring Moss &amp; Mold on National Public Radio</a></h4>
+											<p>Dr. Budke was one of the featured guest experts on Outside/In, a New Hampshire Public Radio's program about the natural world and how we use it. <a href="https://www.nhpr.org/post/outsidein-exploring-moss-and-mold#stream/0" target="_blank">Click here to listen to the full episode.</a> 
+										<h4><a href="http://www.mossplants.blogspot.com/" target="_blank">Moss Plants and More: Commentary on All Things Bryological</a></h4>
+											<p>Dr. Budke wrote a blog communicating information about mosses to the public. She discussed news, research articles, common species, and fun facts. <strong>This blog is currently archived and is not actively updated.</strong></p>
 									</div>
 									<!-- image -->
 									<div class="col-4 col-4-narrow col-12-mobilep">
