Eric walk update

--- a/outreach.html
+++ b/outreach.html
@@ -90,7 +90,7 @@
 										Unless you look closely, you may never know all the wonders that lie hidden in the miniature world of mosses. Dr. Budke annually lectures at the Knoxville Botanical Garden about the diversity of mosses that live in our lawns, between the sidewalk cracks, and in our local forests. Attendees gain identification skills, learn how these tiny plants are important players in our native ecosystems, and go on a photographic adventure to explore mosses from around the world. <a href="http://knoxgarden.org/classes-events/workshops/" target="_blank">Click here to register here to attend the lecture on March 9th, 2021.</a> 
 		</p>
 		<p>Moss Walk with Ph.D. Student Eric Shershen<br />
-		 Eric leads interactive walks around the Garden centered aon mosses. Oftentimes we walk right past mosses without so much a second glance, but in this guided walk you will learn just where and what to look out for! You will become familiar with the various species of mosses found throughout the Gardens and learn the key characteristics to identify them. On our walk, we will also talk about the adaptations these plants have to survive an ever-changing world.
+		 Eric leads interactive walks around the Garden centered on mosses. Oftentimes we walk right past mosses without so much a second glance, but in this guided walk you will learn just where and what to look out for! You will become familiar with the various species of mosses found throughout the Gardens and learn the key characteristics to identify them. On our walk, we will also talk about the adaptations these plants have to survive an ever-changing world.
 	  </p>
 	  </div>
 									<!-- image -->
